feat: Blue ocean innovations — sayCallSite, sayAnnotationProfile, sayClassHierarchy, sayStringProfile, sayReflectiveDiff
Adds 5 new Java 26 reflection + String API showcases to DocTester:

- sayCallSite(): StackWalker provenance — documents calling class, method, line
- sayAnnotationProfile(Class<?>): annotation table from bytecode reflection
- sayClassHierarchy(Class<?>): indented inheritance tree via getSuperclass() chain
- sayStringProfile(String): word/line/char metrics via String.chars() + String.lines()
- sayReflectiveDiff(Object, Object): field-by-field diff via field.setAccessible(true)

All 5 methods added to RenderMachineCommands, RenderMachine (default no-ops),
RenderMachineImpl (full implementations), MultiRenderMachine (dispatchToAll delegates),
DocTester (final delegation), and DocTesterContext (override stubs).

Java26InnovationsTest.java: 5 @Test methods, one per blue ocean innovation,
with live demonstrations and real assertions.

Java26ShowcaseTest.java: Updated to @TestMethodOrder + test1_..test7_ prefixes,
testServerUrl() throws UnsupportedOperationException.

325 tests passing, 0 failures.

https://claude.ai/code/session_01SoFt6Zp5wGegVSMVExTPDi